--- a/index.css
+++ b/index.css
@@ -12,3 +12,17 @@ font-size:large ;
 display: flex;
 flex-direction: column;
 height:1200px}
+main{
+    align-items: center;
+    height:1000px;
+}
+
+header{
+    height:100px;
+    background-color:#154D71;
+    font-size: large;
+    font-weight: 500;
+    text-align: center;
+    align-items: center;
+ 
+}
