--- a/index.css
+++ b/index.css
@@ -26,3 +26,17 @@ header{
     align-items: center;
  
 }
+.card{
+    
+    background-color: #065084;
+    height:fit-content;
+    width:600px;
+    border:2px solid#154D71 ;
+   border-radius: 30px;
+   text-align: center;
+   justify-content: center;
+   display:flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-evenly;
+}
