--- a/index.css
+++ b/index.css
@@ -40,3 +40,157 @@ header{
    align-items: center;
    justify-content: space-evenly;
 }
+.city-weather{
+   align-items: center;
+   justify-content: center;
+   display: flex;
+   height:500px;
+}
+.dayforecast{height:500px}
+.info{
+    background-color:#065084;
+    border: 2px solid black;
+    margin: 10px;
+    justify-content: center;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    line-height: 35px;
+    padding: 20px 10px 20px 30px;
+    letter-spacing:2px;
+}footer{
+    background-color:#154D71;
+    display: flex;
+    height:100px;
+    text-align: center;
+    justify-content: center;
+    letter-spacing: 2px;
+}
+
+@media screen {
+    header{
+
+        font-size:large;
+    }
+    
+    
+}
+@media (min-width:375px)and (max-width:768px){
+    header{
+        height:41px;
+        margin-bottom: 20px;
+
+    }
+    body{height:1000px;}
+    
+    .city-weather{
+        height: 300px;
+        width:375px;
+    }
+    .card{
+        height: fit-content;
+        width:375px;
+        
+
+    }
+    .card img{
+        height:50px;
+        width:50px;
+    }
+    .fore{
+        height:300px;
+        display: flex;
+        flex-direction:column;
+        
+    }
+    .info{
+        height: fit-content;
+        width:375px;
+       
+    }
+    .info img{
+        height:50px;
+        width:50px;
+    }
+    
+
+}
+@media (min-width:768px) and (max-width:1000px ){header{
+        height:41px;
+        margin-bottom: 20px;
+
+    }
+    body{height:1000px;}
+    
+    .city-weather{
+        height: 300px;
+        width:375px;
+    }
+    .card{
+        height: fit-content;
+        width:375px;
+        
+
+    }
+    .card img{
+        height:50px;
+        width:50px;
+    }
+    .fore{
+        height:300px;
+        display: flex;
+        flex-direction:column;
+        
+    }
+    .info{
+        height: fit-content;
+        width:375px;
+       
+    }
+    .info img{
+        height:50px;
+        width:50px;
+    }
+    
+
+}
+@media (min-width:768px) and (max-width:1000px ){header{
+      height:41px;
+        margin-bottom: 20px;
+
+    }
+    body{height:1000px;}
+    
+    .city-weather{
+        height: 300px;
+        width:375px;
+    }
+    .card{
+        height: fit-content;
+        width:375px;
+        
+
+    }
+    .card img{
+        height:50px;
+        width:50px;
+    }
+    .fore{
+        height:300px;
+        display: flex;
+        flex-direction:column;
+        
+    }
+    .info{
+        height: fit-content;
+        width:375px;
+       
+    }
+    .info img{
+        height:50px;
+        width:50px;
+    }
+    
+
+    
+}
